--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul class="nav navbar-nav">
                 <li href="#">HOME</li>
                 <li href="#">SOBRE NATRUS</li>
-                <li href="#">LINKS</li>
+                <li href="#">PAtataaaa</li>
                 <li href="#">CONTACT</li>
           </ul>
         </div>
